Add style to structure component.

--- a/SBUI/package.json
+++ b/SBUI/package.json
@@ -19,8 +19,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@progress/kendo-angular-buttons": "^5.0.0",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-dropdowns": "^4.0.0",
+    "@progress/kendo-angular-inputs": "^6.0.0",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-angular-treeview": "^4.0.0",
+    "@progress/kendo-drawing": "^1.5.12",
+    "@progress/kendo-theme-bootstrap": "^3.4.2",
+    "@progress/kendo-theme-default": "latest",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
