--- a/SBUI/package.json
+++ b/SBUI/package.json
@@ -25,6 +25,7 @@
     "@progress/kendo-angular-inputs": "^6.0.0",
     "@progress/kendo-angular-intl": "^2.0.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-layout": "^4.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-angular-treeview": "^4.0.0",
     "@progress/kendo-drawing": "^1.5.12",
