--- a/SBUI/package.json
+++ b/SBUI/package.json
@@ -28,6 +28,7 @@
     "@progress/kendo-angular-layout": "^4.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-angular-treeview": "^4.0.0",
+    "@progress/kendo-angular-upload": "^5.0.0",
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-bootstrap": "^3.4.2",
     "@progress/kendo-theme-default": "latest",
